[package]
name = "orx-concurrent-bag"
version = "2.12.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "An efficient, convenient and lightweight grow-only concurrent data structure allowing high performance concurrent collection."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-concurrent-bag/"
keywords = ["concurrency", "bag", "data-structures", "atomic", "lock-free"]
categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]

[dependencies]
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = "3.16.0"
orx-fixed-vec = "3.16.0"
orx-split-vec = "3.16.0"
orx-pinned-concurrent-col = "2.13.0"

[dev-dependencies]
test-case = "3.3.1"
criterion = "0.5.1"
rand = "0.9.0"
rayon = "1.10.0"
append-only-vec = "0.1.7"
boxcar = "0.2.11"
orx-iterable = { version = "1.3.0", default-features = false }

[[bench]]
name = "collect_with_extend"
harness = false
